--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "mdast-util-to-string": "^1.0.6",
-    "unist-util-visit": "^1.4.1"
+    "unist-util-visit": "^1.4.1",
+    "unist-util-visit-parents": "^2.1.2"
   }
 }
